I have added Controllers for adding hotels to cart, viewing hotels in user's cart and removing hotels from cart

--- a/HotelBookingApp/HotelBooking.Services/HotelBooking.Services.csproj
+++ b/HotelBookingApp/HotelBooking.Services/HotelBooking.Services.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HotelBooking.Data\HotelBooking.Data.csproj" />
+    <ProjectReference Include="..\HotelBooking.Models\HotelBooking.Models.csproj" />
+  </ItemGroup>
+
 </Project>
