finished the admin panel

--- a/HotelBookingApp/HotelBooking.Web/HotelBooking.Web.csproj
+++ b/HotelBookingApp/HotelBooking.Web/HotelBooking.Web.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\HotelBooking.Services\HotelBooking.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
